--- a/customer-schema/pom.xml
+++ b/customer-schema/pom.xml
@@ -9,13 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sale-consumer</artifactId>
+    <artifactId>customer-schema</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-kafka-client</artifactId>
-            <version>${vertx.version}</version>
+            <groupId>br.com.emmanuelneri</groupId>
+            <artifactId>mapper-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka-streams.version}</version>
         </dependency>
     </dependencies>
 
