--- a/customer-stream/pom.xml
+++ b/customer-stream/pom.xml
@@ -14,7 +14,33 @@
     <dependencies>
         <dependency>
             <groupId>br.com.emmanuelneri</groupId>
+            <artifactId>customer-schema</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>br.com.emmanuelneri</groupId>
+                    <artifactId>mapper-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.kafka</groupId>
+                    <artifactId>kafka-clients</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>br.com.emmanuelneri</groupId>
             <artifactId>debezium-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>br.com.emmanuelneri</groupId>
+                    <artifactId>mapper-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>br.com.emmanuelneri</groupId>
+            <artifactId>mapper-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
