--- a/sale-consumer/pom.xml
+++ b/sale-consumer/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>sale-consumer</artifactId>
 
+    <properties>
+        <vertx.launcher>br.com.emmanuelneri.sale.consumer.SaleConsumerApplication</vertx.launcher>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.vertx</groupId>
@@ -18,5 +22,39 @@
             <version>${vertx.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.reactiverse</groupId>
+                <artifactId>vertx-maven-plugin</artifactId>
+                <version>${reactiverse.vertx.maven.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>vmp</id>
+                        <goals>
+                            <goal>initialize</goal>
+                            <goal>package</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <redeploy>true</redeploy>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>${fabric8.docker.plugin.version}</version>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>${project.parent.artifactId}/${project.name}</name>
+                        </image>
+                    </images>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
