--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,19 @@
     <packaging>pom</packaging>
 
     <properties>
+        <kafka-streams.version>2.4.0</kafka-streams.version>
+        <vertx.version>3.8.5</vertx.version>
+        <jackson.version>2.9.9</jackson.version>
+        <junit.version>4.12</junit.version>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <kafka-streams.version>2.4.0</kafka-streams.version>
-        <vertx.version>3.8.5</vertx.version>
-        <jackson.version>2.9.9</jackson.version>
-        <junit.version>4.12</junit.version>
+        <reactiverse.vertx.maven.plugin.version>1.0.22</reactiverse.vertx.maven.plugin.version>
+        <fabric8.docker.plugin.version>0.33.0</fabric8.docker.plugin.version>
+        <apache.maven.assembly.plugin.version>3.2.0</apache.maven.assembly.plugin.version>
     </properties>
 
     <modules>
