--- a/sale-stream/pom.xml
+++ b/sale-stream/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>sale-stream</artifactId>
 
+    <properties>
+        <main.class>br.com.emmanuelneri.sale.stream.SaleStreamApplication</main.class>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>br.com.emmanuelneri</groupId>
@@ -49,5 +53,45 @@
             <version>${kafka-streams.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>${apache.maven.assembly.plugin.version}</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${main.class}</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>${fabric8.docker.plugin.version}</version>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>${project.parent.artifactId}/${project.name}</name>
+                        </image>
+                    </images>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
